2011-08-01  Sam Steingold  <sds@gnu.org>

	fix recent breakage
	* socket.d (CLOSE) [win32]: define
	* win32.d (ioctl): define to ioctlsocket

2011-08-01  Sam Steingold  <sds@gnu.org>

	fix "clean" targets
	* makemake.in (anymodule): do not remove gllib; there is not such dir
	(clean1): do not remove build-aux, but do remove dynmod
	(clean5): remove modules.h and build-aux unless building in src
	(clean6): do not remove Makefile
	(clean7): depend on distclean-subdirs
	(clean-subdirs, distclean-subdirs): new targets
	(clean): depend on clean-subdirs
	* po/Makefile.in.in (distclean): remove Makefile.in

2011-08-01  Sam Steingold  <sds@gnu.org>

	* utils/txt2c.c (process_file): avoid a segfault by checking that
	standard_include_path is not NULL before accessing it

2011-08-01  Sam Steingold  <sds@gnu.org>

	revert the parts of the 2011-07-29 15496:d628d9ac3fce patch
	which broke the in-place build (in the src directory)
	* _clisp.c: include w32shell & execname with "", not <>
	* encoding.d: include nls_* with "", not <>
	* eval.d: include lightning with "", not <>
	* lispbibl.d: include version.h with "", not <>
	* modules.c: include lispbibl & clisp with "", not <>
	* spvw.d: include spvw_calendar.c with "", not <>

2011-08-01  Sam Steingold  <sds@gnu.org>

	* modules/berkeley-db/configure.in, modules/clx/new-clx/configure.in:
	* modules/syscalls/configure.in: call AC_SYS_LARGEFILE before the
	first AC_CHECK_SIZEOF to ensure 64-bit size_t
	Reported by Vladimir Tzankov <vtzankov@gmail.com> in
	<http://article.gmane.org/gmane.lisp.clisp.devel:22642>

2011-07-29  Sam Steingold  <sds@gnu.org>

	link over fewer files into the build directory
	* makemake.in (CLISP_LIBDIR): do not set
	(EVERY_INCLUDES_H): remove gllib files
	(UNICODE_INCLUDES, NLS_INCLUDES, SPVW_VERSION, w32shell.c)
	(execname.c, spvw_calendar.c, with_jitc): do not link over
	(TXT2CINCL): use SRCDIR, not SRCTOPDIR
	(gllib): pass top_srcdir, not CLISP_LIBDIR to make
	(modules.h): create with touch