@@ -1,3 +1,8 @@
+2011-08-02  Sam Steingold  <sds@gnu.org>
+
+	* conditions.tst: Do not ignore user-supplied print methods for
+	user-defined SIMPLE-CONDITIONs (bug#3384825).
+
 2011-08-01  Sam Steingold  <sds@gnu.org>
 
 	* pack11.tst (*modules*) [clisp]: boot linking set contains only
